--- a/src/styles/params.scss
+++ b/src/styles/params.scss
@@ -1,8 +1,7 @@
-$primary: #22CBC1;
-$bg: #EEFAFA;
-$bg-decor: linear-gradient(180deg,#22CBC1, #07E3D6 0%, #0EB7AD 99.02%);
-$click: #0EB7AD;
-$text-decor: #00716A;
-$form:#C5F1EF;
-$title: #26394B;
-$text: #46596A;
+$primary-red: #E55241;
+$bg: #E5E5E5;
+$bg-block: #F6F6F6;
+$title: #1E222E;
+$text: #3A3E48;
+$text-light: #A6A6A6;
+$decor: #2F2F2F;
