--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,108 +1,164 @@
 .footer {
-   background-color: $title;
-   padding-top: 54px;
-
-   .contact {
-      display: flex;
-      justify-content: space-between;
-      padding-bottom: 45px;
-      border-bottom: 1px solid #475766;
-      .column {
-         color: #fff;
-         &__header {
-            font-size: 14px;
-            margin-bottom: 14px;
-         }
-         &__link  {
-            color: inherit;
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 1.5;
-            transition: color 0.2s ease-in-out;
-            &:hover {
-               color: $primary;
-            }
-         }
-         span {
-            color: #A8B0B7;
-            font-size: 13px;
-         }
-
-         @media screen and (max-width: 1364px) {
-            padding-bottom: 32px;
-
-            &:nth-child(2) {
-               order: 1;
-            }
-            &:nth-child(3) {
-               order: 1;
-            }
-         }
-
-         @media screen and (max-width: 768px) {
-            padding-bottom: 20px;
-            padding-top: 29px;
-            border-bottom: 1px solid #475766;
-            &:nth-child(1) {
-               padding-top: 0;
-            }
-            &:nth-child(2) {
-               order: 0;
-            }
-            &:nth-last-of-type(2) {
-               border-bottom: none;
-            }
-         }
-
-      }
-      @media screen and (max-width: 1364px) {
-         padding-bottom: 8px;
-      }
+   &__top {
+      background-color: #272727;
+      padding: 30px 0;
    }
 
-   &__block {
-      padding-top: 25px;
-      padding-bottom: 35px;
+   &__wrapper {
       display: flex;
-      align-items: center;
       justify-content: space-between;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 1.5;
-      color: #A8B0B7;
+      flex-direction: column;
 
-      @media screen and (max-width:1364px) {
-         flex-direction: column;
-         align-items: flex-start;
-         padding-bottom: 20px;
-      }
+      gap: 30px;
 
-      .copyright {
-         @media screen and (max-width:1364px) {
-            margin-bottom: 7px;
-         }
+      @media screen and (min-width: 1236px) {
+         flex-direction: row;
       }
    }
 
    &__logo {
-      margin-left: 15px;
-   }
+      width: 208px;
+      height: 176px;
 
-   .developer {
-      display: flex;
-      align-items: center;
-   }
-
-   .icon {
-      width: 112px;
-      height: 24px;
-      fill: #fff;
-      color: #E55030;
-      transition: all 0.2s ease-out;
-      &:hover {
-         fill: $primary;
-         color: #fff;
+      img {
+         width: 100%;
+         height: 100%;
+         object-fit: cover;
       }
    }
 
+   &__nav {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+
+      @media screen and (min-width: 1236px) {
+         flex-direction: row;
+      }
+   }
+
+   &-nav {
+      &__list {
+         display: flex;
+         flex-direction: column;
+      }
+
+      &__item {
+         padding-bottom: 2px;
+         margin-bottom: 10px;
+
+         border-bottom: 1px solid $decor;
+      }
+
+      &__link {
+         display: flex;
+         justify-content: space-between;
+         align-items: start;
+
+         font-weight: 600;
+         font-size: 12px;
+         color: #fff;
+         text-transform: uppercase;
+
+         transition: all 0.2s linear;
+
+         .icon {
+            width: 5px;
+            height: 10px;
+            fill: #fff;
+
+            transition: all 0.2s linear;
+         }
+
+         &:hover {
+            position: relative;
+            padding-left: 5px;
+            color: $text-light;
+
+            .icon {
+               fill: $text-light;
+            }
+         }
+      }
+   }
+
+   .social {
+      display: flex;
+      flex-direction: column;
+      &__wrapper {
+         display: flex;
+         gap: 10px;
+
+         @media screen and (min-width: 1236px) {
+            flex-direction: column;
+            gap: 20px;
+         }
+      }
+
+      &__list {
+         display: flex;
+         align-items: center;
+         gap: 10px;
+
+         @media screen and (min-width: 1236px) {
+            gap: 15px;
+         }
+      }
+
+      &__item {
+         width: 32px;
+         height: 32px;
+
+         border-radius: 4px;
+         overflow: hidden;
+
+         @media screen and (min-width: 1236px) {
+            width: 40px;
+            height: 40px;
+         }
+      }
+
+      &__link {
+         height: 100%;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+
+         background-color: #373737;
+
+         transition: background-color 0.2s linear;
+
+         &:hover {
+            background-color: #fff;
+
+            .icon {
+               fill: #373737;
+            }
+         }
+
+         .icon {
+            fill: #fff;
+            transition: fill 0.2s linear;
+
+            &--fb {
+               width: 10px;
+               height: 20px;
+            }
+            &--vk {
+               width: 22px;
+               height: 13px;
+            }
+            &--inst {
+               width: 20px;
+               height: 20px;
+            }
+            &--tm {
+               width: 23px;
+               height: 20px;
+            }
+         }
+      }
+   }
+
+   
 }
