--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -56,15 +56,15 @@ button {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
-   padding-left: 10px;
-   padding-right: 10px;
+   padding-left: 18px;
+   padding-right: 18px;
 
    @media screen and (min-width: 768px) {
-       max-width: 748px;
+      max-width: 748px;
    }
 
-   @media screen and (min-width: 1364px) {
-       max-width: 1344px;
+   @media screen and (min-width: 1236px) {
+      max-width: 1200px;
    }
 }
 
@@ -74,9 +74,9 @@ button {
    margin-left: -10px;
    margin-right: -10px;
 
-   @media screen and (min-width: 1364px) {
-       margin-left: -10px;
-       margin-right: -10px;
+   @media screen and (min-width: 1236px) {
+       margin-left: -15px;
+       margin-right: -15px;
    }
 }
 
@@ -87,9 +87,9 @@ button {
    padding-left: 10px;
    padding-right: 10px;
 
-   @media screen and (min-width: 1364px) {
-       padding-left: 10px;
-       padding-right: 10px;
+   @media screen and (min-width: 1236px) {
+       padding-left: 15px;
+       padding-right: 15px;
    }
 }
 
@@ -136,96 +136,118 @@ button {
 }
 
 .cols-2 {
-   width: 80%;
-}
-
-.cols-3 {
-   width: 66.6666666666%;
-}
-
-.cols-4 {
-   width: 60%;
-}
-
-.cols-5 {
-   width: 40%;
-}
-
-.cols-6 {
-   width: 33.3333333333%;
-}
-
-.cols-7 {
-   width: 20%;
-}
-
-.cols-8 {
    width: 16.6666666667%;
 }
 
-@media screen and (min-width: 576px) {
-   .row-cols-sm-1 > * {
-       width: 100%;
-   }
-
-   .row-cols-sm-2 > * {
-       width: 50%;
-   }
-
-   .row-cols-sm-3  > * {
-       width: 33.3333333333%;
-   }
-
-   .row-cols-sm-4 > * {
-       width: 25%;
-   }
-
-   .row-cols-sm-5 > * {
-       width: 20%;
-   }
-
-   .row-cols-sm-6 > * {
-       width: 16.6666666667%;
-   }
-
-   // column grid--------------------------------->>>>>
-
-   .cols-sm-1 {
-      width: 100%;
-   }
-   
-   .cols-sm-2 {
-      width: 80%;
-   }
-
-   .cols-sm-3 {
-      width: 66.6666666666%;
-   }
-
-   .cols-sm-4 {
-      width: 60%;
-   }
-
-   .cols-sm-5 {
-      width: 50%;
-   }
-
-   .cols-sm-6 {
-      width: 40%;
-   }
-
-   .cols-sm-7 {
-      width: 33.3333333333%;
-   }
-
-   .cols-sm-8 {
-      width: 20%;
-   }
-
-   .cols-sm-9 {
-      width: 16.6666666667%;
-   }
+.cols-3 {
+   width: 25%;
 }
+
+.cols-4 {
+   width: 33.3333333333%;
+}
+
+.cols-5 {
+   width: 41.6666666667%;
+}
+
+.cols-6 {
+   width: 50%;
+}
+
+.cols-7 {
+   width: 58.33333333333%;   
+}
+
+.cols-8 {
+   width: 66.6666666667%;
+}
+
+.cols-9 {
+   width: 75%;
+}
+
+.cols-10 {
+   width: 83.3333333333%;
+}
+
+
+.cols-11 {
+   width: 91.6666666667%;
+}
+
+// @media screen and (min-width: 576px) {
+//    .row-cols-sm-1 > * {
+//        width: 100%;
+//    }
+
+//    .row-cols-sm-2 > * {
+//        width: 50%;
+//    }
+
+//    .row-cols-sm-3  > * {
+//        width: 33.3333333333%;
+//    }
+
+//    .row-cols-sm-4 > * {
+//        width: 25%;
+//    }
+
+//    .row-cols-sm-5 > * {
+//        width: 20%;
+//    }
+
+//    .row-cols-sm-6 > * {
+//        width: 16.6666666667%;
+//    }
+
+//    // column grid--------------------------------->>>>>
+
+//    .cols-sm-1 {
+//       width: 100%;
+//    }
+
+//    .cols-sm-2 {
+//       width: 16.6666666667%;
+//    }
+
+//    .cols-sm-3 {
+//       width: 25%;
+//    }
+
+//    .cols-sm-4 {
+//       width: 33.3333333333%;
+//    }
+
+//    .cols-sm-5 {
+//       width: 41.6666666667%;
+//    }
+
+//    .cols-sm-6 {
+//       width: 50%;
+//    }
+
+//    .cols-sm-7 {
+//       width: 58.33333333333%;   
+//    }
+
+//    .cols-sm-8 {
+//       width: 66.6666666667%;
+//    }
+
+//    .cols-sm-9 {
+//       width: 75%;
+//    }
+
+//    .cols-sm-10 {
+//       width: 83.3333333333%;
+//    }
+
+
+//    .cols-sm-11 {
+//       width: 91.6666666667%;
+//    }
+// }
 
 @media screen and (min-width: 768px) {
    .row-cols-md-1 > * {
@@ -254,44 +276,53 @@ button {
 
     // column grid--------------------------------->>>>>
 
-   .cols-md-1 {
+    .cols-md-1 {
       width: 100%;
    }
-   
+
    .cols-md-2 {
-      width: 80%;
-   }
-
-   .cols-md-3 {
-      width: 66.6666666666%;
-   }
-
-   .cols-md-4 {
-      width: 60%;
-   }
-
-   .cols-md-5 {
-      width: 40%;
-   }
-
-   .cols-md-6 {
-      width: 33.3333333333%;
-   }
-
-   .cols-md-7 {
-      width: 20%;
-   }
-
-   .cols-md-8 {
       width: 16.6666666667%;
    }
 
-   .cols-md-9 {
+   .cols-md-3 {
+      width: 25%;
+   }
+
+   .cols-md-4 {
+      width: 33.3333333333%;
+   }
+
+   .cols-md-5 {
+      width: 41.6666666667%;
+   }
+
+   .cols-md-6 {
       width: 50%;
+   }
+
+   .cols-md-7 {
+      width: 58.33333333333%;   
+   }
+
+   .cols-md-8 {
+      width: 66.6666666667%;
+   }
+
+   .cols-md-9 {
+      width: 75%;
+   }
+
+   .cols-md-10 {
+      width: 83.3333333333%;
+   }
+
+
+   .cols-md-11 {
+      width: 91.6666666667%;
    }
 }
 
-@media screen and (min-width: 1364px) {
+@media screen and (min-width: 1236px) {
    .row-cols-lg-1 > * {
       width: 100%;
    }
@@ -323,43 +354,44 @@ button {
    }
 
    .cols-lg-2 {
-      width: 80%;
-   }
-
-   .cols-lg-3 {
-      width: 66.6666666666%;
-   }
-
-   .cols-lg-4 {
-      width: 60%;
-   }
-
-   .cols-lg-5 {
-      width: 40%;
-   }
-
-   .cols-lg-6 {
-      width: 33.3333333333%;
-   }
-
-   .cols-lg-7 {
-      width: 20%;
-   }
-
-   .cols-lg-8 {
       width: 16.6666666667%;
    }
 
-   .cols-lg-9 {
+   .cols-lg-3 {
+      width: 25%;
+   }
+
+   .cols-lg-4 {
+      width: 33.3333333333%;
+   }
+
+   .cols-lg-5 {
       width: 41.6666666667%;
    }
 
+   .cols-lg-6 {
+      width: 50%;
+   }
+
+   .cols-lg-7 {
+      width: 58.33333333333%;   
+   }
+
+   .cols-lg-8 {
+      width: 66.6666666667%;
+   }
+
    .cols-lg-9 {
-      width: 41.6666666667%;
+      width: 75%;
    }
 
    .cols-lg-10 {
-      width: 58.33333333333%;
+      width: 83.3333333333%;
+   }
+
+
+   .cols-lg-11 {
+      width: 91.6666666667%;
    }
 
 }
