--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,235 +1,106 @@
 body {
-   font-family: 'Roboto', sans-serif;
-   background-color: #FFF;
+   font-family: 'ProximaNova', sans-serif;
+   background-color: #fff;
 }
 
 body.lock {
    overflow: hidden;
 }
 
-.main {
-   &__operation {
-      margin-bottom: 99px;
-      &:last-of-type {
-         margin-bottom: 0;
-      }
-
-      @media screen and (max-width:1364px) {
-         margin-bottom: 70px;
-      }
-
-      @media screen and (max-width:768px) {
-         margin-bottom: 33px;
-      }
-   }
-
-   &__advantages {
-      margin-bottom: 92px;
-
-      @media screen and (max-width:768px) {
-         margin-bottom: 33px;
-      }
-
-      @media screen and (max-width:1364px) {
-         margin-bottom: 70px;
-      }
-   }
-
-   &__preview {
-      margin-bottom: 100px;
-
-      @media screen and (max-width:768px) {
-         margin-bottom: 15px;
-      }
-   }
-}
-
-
-.title {
-   font-weight: 400;
-   font-size: 46px;
-   line-height: 110%;
-   color: $title;
-   margin-bottom: 30px;
-
-   @media screen and (max-width: 768px) {
-      font-size: 24px;
-      line-height: 1.3;
-      margin-bottom: 19px;
-
-      &--h1 {
-         font-size: 38px;
-         text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.05);
-         margin-bottom: 12px;
-      }
-
-
-   }
-
-   &--h1 {
-      font-size: 38px;
-      text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.05);
-   }
-}
-
-.subtitle {
-   font-weight: 400;
-   font-size: 32px;
-   line-height: 106%;
-   color: $title;
-   &--mb17 {
-      margin-bottom: 17px;
-   }
-}
-
-.text {
-   font-weight: 400;
-   font-size: 18px;
-   line-height: 1.5;
-   color: $text;
-   &--mb30 {
-      margin-bottom: 30px;
-   }
-
-   @media screen and (max-width: 768px) {
-      font-size: 14px;
-   }
-}
-
-.text > *+* {
-   margin-top: 20px;
-}
-
-
 .btn {
-   padding: 18px 18px;
-   border-radius: 5px;
-   font-weight: 500;
-   font-size: 18px;
-   line-height: 27px;
-   color: #fff;
+   padding: 15px;
+   background-color: $primary-red;
 
    display: flex;
    align-items: center;
    justify-content: center;
 
-   background: linear-gradient(180deg, rgba(34,203,193,1) 0%, rgba(7,227,214,1) 45%, rgba(14,183,173,1) 100%);
-   background-size: 100% 300%;
-   background-position: 100% 0;
+   font-style: normal;
+   font-weight: 700;
+   font-size: 14px;
+   line-height: 1.5;
+   line-height: 24px;
+   color: #FFF;
 
-   transition: all 0.2s ease-in-out;
-
-   &-fixed {
-      display: none;
-
-      transition: all 0.1s ease-in-out;
-      &__icon {
-         pointer-events: none;
-         width: 26px;
-         height: 26px;
-         margin-right: 8px;
-      }
-   }
-
-   &--p12 {
-      padding: 12px;
-   }
+   border: 1px solid $primary-red;
+   border-radius: 4px;
+   transition: all 0.2s linear;
 
    &:hover {
-      background-position: 0 50%;
+      background-color: #FFF;
+      color: $primary-red;
    }
 
    &:active {
-      background-position: 0 100%;
+      background-color: #DD1718;
+      border-color: #DD1718;
    }
 
-   @media screen and (max-width: 768px) {
-      font-size: 16px;
-      padding: 11px 18px;
+   @media screen and (min-width: 1236px) {
+      padding: 20px;
+      font-size: 18px;
+   }
+}
 
-      &-fixed {
-         display: flex;
-         width: 100%;
-         padding: 15px 18px;
-         width: 290px;
-         margin-left: auto;
-         margin-right: auto;
-         margin-bottom: 15px;
+.title {
+   line-height: 1.5;
+   color: $title;
+   font-size: 20px;
 
-         transition: all 0.2s ease-in-out;
+   &--main {
+      font-size: 24px;
 
-         &--active {
-            position: fixed;
-            right: 15px;
-            bottom: 15px;
-            z-index: 99;
-
-            width: 56px;
-            height: 56px;
-            padding: 15px;
-
-            box-shadow: 0px 0px 15px #4ED5CD;
-            span {
-               display: none;
-            }
-
-            .btn-fixed__icon {
-               margin: 0;
-            }
-         }
+      @media screen and (min-width: 768px) {
+         font-size: 32px;
+      }
+   
+      @media screen and (min-width: 1236px) {
+         font-size: 48px;
       }
    }
-}
 
-
-.nav {
-
-   &::-webkit-scrollbar {
-      display: none;
+   @media screen and (min-width: 768px) {
+      font-size: 24px;
    }
 
-   & {
-      -ms-overflow-style: none;
-      scrollbar-width: none;
-   }
-
-   position: relative;
-   overflow: auto;
-
-   &__list {
-      margin: 50px 0;
+   @media screen and (min-width: 1236px) {
+      font-size: 32px;
    }
 }
 
+.text {
+   line-height: 1.5;
+   font-size: 14px;
+   color: $text;
 
-
-
-
-.preview__doctor {
-   display: flex;
-   justify-content: flex-end;
-   align-items: flex-end;
-
-   img {
-      max-height: 100%;
-
-      @media screen and (max-width: 1364px) {
-         max-height: 577px;
-      }
-
+   &--sm {
+      font-size: 10px;
    }
 
-}
-
-.nav__list {
-   @media screen and (max-width: 1364px) {
-      margin: 0;
+   &--lg {
+      font-size: 20px;
    }
 }
 
 
-.preview {
-   @media screen and (max-width: 1364px) {
-      min-height: 0;
+.input {
+   padding: 16px;
+
+   border: 1px solid #E1E1E1;
+   border-radius: 4px;
+   background: rgba(33, 62, 97, 0.04);
+
+   font-weight: 400;
+   font-size: 16px;
+   color: #999999;
+
+   transition: all 0.2s linear;
+
+   &:active {
+      color: $title;
+   }
+
+   &--error {
+      border: 1px solid $primary-red;
    }
 }
