--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -41,6 +41,7 @@
       &__list {
          display: flex;
          flex-direction: column;
+         min-width: 220px;
       }
 
       &__item {
@@ -87,10 +88,14 @@
       flex-direction: column;
       &__wrapper {
          display: flex;
+         align-items: center;
          gap: 10px;
+
+         margin-bottom: 20px;
 
          @media screen and (min-width: 1236px) {
             flex-direction: column;
+            align-items: flex-start;
             gap: 20px;
          }
       }
@@ -156,6 +161,90 @@
                width: 23px;
                height: 20px;
             }
+         }
+      }
+
+      &__mail {
+         font-weight: 700;
+         font-size: 14px;
+         color: #fff;
+
+         &:hover {
+            text-decoration: underline;
+         }
+      }
+
+      &__youtb {
+         display: flex;
+         align-items: center;
+
+         transition: all 0.2s linear;
+         &:hover {
+            transform: scale(1.05);
+         }
+      }
+
+      @media screen and (min-width: 1236px) {
+         justify-content: space-between;
+      }
+   }
+
+   &__bottom {
+      display: flex;
+      align-items: center;
+      padding: 12px 0;
+
+      background-color: #202020;
+   }
+
+   &__copyright {
+      display: none;
+
+      font-size: 14px;
+      line-height: 20px;
+      color: #fff;
+
+      @media screen and (min-width: 1236px) {
+         display: block;
+      }
+   }
+
+   &__info {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+   }
+
+   &__doc {
+      display: flex;
+      align-items: center;
+      a {
+         font-weight: 400;
+         font-size: 12px;
+         color: #fff;
+         &:hover {
+            text-decoration: underline;
+         }
+
+         &:first-child {
+            margin-right: 10px;
+            position: relative;
+            &::after {
+               content: '';
+               display: block;
+
+               width: 1px;
+               height: 18px;
+               background-color: #fff;
+
+               position: absolute;
+               top: 0;
+               right: -10px;
+            }
+         }
+
+         &:last-child {
+            margin-left: 10px;
          }
       }
    }
