--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -54,6 +54,10 @@
       }
    }
 
+   .row > *.col {
+      margin-top: 40px;
+   }
+
    .details {
       &__header {
          margin-bottom: 30px;
@@ -85,6 +89,7 @@
             width: 15px;
             height: 12px;
             fill: $primary-red;
+            margin-left: 20px;
 
             transition: all 0.2s linear;
          }
@@ -93,8 +98,12 @@
             color: $primary-red;
 
             .icon {
-               margin-left: 5px;
+               margin-left: 25px;
             }
+         }
+
+         @media screen and (min-width: 1236px) {
+            font-size: 24px;
          }
       }
 
@@ -104,6 +113,8 @@
          border-radius: 10px;
          overflow: hidden;
          position: relative;
+
+         flex: 1 1 auto;
          &__preview {
             position: relative;
             overflow: hidden;
@@ -112,6 +123,12 @@
             justify-content: center;
 
             height: 208px; 
+
+            img {
+               width: 100%;
+               height: 100%;
+               object-fit: cover;
+            }
 
             @media screen and (min-width: 1236px) {
                height: 236px;
@@ -138,9 +155,16 @@
             }
          }
 
+         &__item {
+            border-bottom: 1px solid #F3F3F3;
+
+            &:last-child {
+               border: none;
+            }
+         }
+
          &__link {
             padding: 10px 12px;
-            border-bottom: 1px solid #F3F3F3;
    
             font-weight: 400;
             font-size: 14px;
@@ -174,20 +198,24 @@
       }
 
       .question {
-         border-radius: 10px;
+         border-radius: 10px 10px 4px 4px;
          overflow: hidden;
+         flex: 1 1 auto;
+
+         display: flex;
+         flex-direction: column;
          &__image {
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
-            overflow: hidden;
+            flex: 1 1 357px;
 
-            height: 357px;
+            overflow: hidden;
             margin-bottom: 20px;
 
             img {
-               width: 100%;
-               height: 100%;
+               flex: 1 1 auto;
                object-fit: cover;
             }
          }
