--- a/src/styles/blocks/preview.scss
+++ b/src/styles/blocks/preview.scss
@@ -17,11 +17,11 @@
 
       background: url(../../images/main.png) center / cover no-repeat;
 
-      @media screen and (min-width: 1234px) {
+      @media screen and (min-width: 1280px) {
          min-width: 603px;
          min-height: 583px;
          left: auto;
-         right: 14%;
+         right: 12%;
          transform: translateX(0);
       }
    }
@@ -30,7 +30,7 @@
       padding-left: 34px;
       margin-bottom: 35px;
 
-      @media screen and (min-width: 1234px) {
+      @media screen and (min-width: 1280px) {
          padding-left: 48px;
          margin-bottom: 40px;
       }
@@ -63,13 +63,13 @@
 
          background: url(../../images/maple.svg) center / cover no-repeat;
 
-         @media screen and (min-width: 1234px) {
+         @media screen and (min-width: 1280px) {
             width: 36px;
             height: 36px;
          }
       }
 
-      @media screen and (min-width: 1234px) {
+      @media screen and (min-width: 1280px) {
          font-size: 24px;
       }
    }
@@ -85,7 +85,7 @@
       .btn {
          min-width: 165px;
 
-         @media screen and (min-width: 1234px) {
+         @media screen and (min-width: 1280px) {
             padding: 19px 50px;
          }
       }
@@ -104,7 +104,7 @@
          right: 20%;
       }
 
-      @media screen and (min-width: 1234px) {
+      @media screen and (min-width: 1280px) {
          display: block;
       }
    }
@@ -116,7 +116,7 @@
       width: 140px;
       height: 30px;
 
-      @media screen and (min-width: 1234px) {
+      @media screen and (min-width: 1280px) {
          width: 282px;
          height: 62px;
       }
@@ -126,7 +126,7 @@
          left: 257px;
          display: none; 
 
-         @media screen and (min-width: 1234px) {
+         @media screen and (min-width: 1280px) {
             display: block;
             
             width: 46px;
@@ -135,9 +135,9 @@
       }
    }
 
-   @media screen and (min-width: 1234px) {
+   @media screen and (min-width: 1280px) {
       min-height: 750px;
-
+      padding-top: 140px;
       background-image: linear-gradient(-60deg,rgb(255, 55, 55) 24%,#f4f4f4 22%);
    }
 
