--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -63,7 +63,7 @@ button {
       max-width: 748px;
    }
 
-   @media screen and (min-width: 1236px) {
+   @media screen and (min-width: 1280px) {
       max-width: 1200px;
    }
 }
@@ -74,7 +74,7 @@ button {
    margin-left: -10px;
    margin-right: -10px;
 
-   @media screen and (min-width: 1236px) {
+   @media screen and (min-width: 1280px) {
        margin-left: -15px;
        margin-right: -15px;
    }
@@ -87,7 +87,7 @@ button {
    padding-left: 10px;
    padding-right: 10px;
 
-   @media screen and (min-width: 1236px) {
+   @media screen and (min-width: 1280px) {
        padding-left: 15px;
        padding-right: 15px;
    }
@@ -176,78 +176,78 @@ button {
    width: 91.6666666667%;
 }
 
-// @media screen and (min-width: 576px) {
-//    .row-cols-sm-1 > * {
-//        width: 100%;
-//    }
+@media screen and (min-width: 576px) {
+   .row-cols-sm-1 > * {
+       width: 100%;
+   }
 
-//    .row-cols-sm-2 > * {
-//        width: 50%;
-//    }
+   .row-cols-sm-2 > * {
+       width: 50%;
+   }
 
-//    .row-cols-sm-3  > * {
-//        width: 33.3333333333%;
-//    }
+   .row-cols-sm-3  > * {
+       width: 33.3333333333%;
+   }
 
-//    .row-cols-sm-4 > * {
-//        width: 25%;
-//    }
+   .row-cols-sm-4 > * {
+       width: 25%;
+   }
 
-//    .row-cols-sm-5 > * {
-//        width: 20%;
-//    }
+   .row-cols-sm-5 > * {
+       width: 20%;
+   }
 
-//    .row-cols-sm-6 > * {
-//        width: 16.6666666667%;
-//    }
+   .row-cols-sm-6 > * {
+       width: 16.6666666667%;
+   }
 
-//    // column grid--------------------------------->>>>>
+   // column grid--------------------------------->>>>>
 
-//    .cols-sm-1 {
-//       width: 100%;
-//    }
+   .cols-sm-1 {
+      width: 100%;
+   }
 
-//    .cols-sm-2 {
-//       width: 16.6666666667%;
-//    }
+   .cols-sm-2 {
+      width: 16.6666666667%;
+   }
 
-//    .cols-sm-3 {
-//       width: 25%;
-//    }
+   .cols-sm-3 {
+      width: 25%;
+   }
 
-//    .cols-sm-4 {
-//       width: 33.3333333333%;
-//    }
+   .cols-sm-4 {
+      width: 33.3333333333%;
+   }
 
-//    .cols-sm-5 {
-//       width: 41.6666666667%;
-//    }
+   .cols-sm-5 {
+      width: 41.6666666667%;
+   }
 
-//    .cols-sm-6 {
-//       width: 50%;
-//    }
+   .cols-sm-6 {
+      width: 50%;
+   }
 
-//    .cols-sm-7 {
-//       width: 58.33333333333%;   
-//    }
+   .cols-sm-7 {
+      width: 58.33333333333%;   
+   }
 
-//    .cols-sm-8 {
-//       width: 66.6666666667%;
-//    }
+   .cols-sm-8 {
+      width: 66.6666666667%;
+   }
 
-//    .cols-sm-9 {
-//       width: 75%;
-//    }
+   .cols-sm-9 {
+      width: 75%;
+   }
 
-//    .cols-sm-10 {
-//       width: 83.3333333333%;
-//    }
+   .cols-sm-10 {
+      width: 83.3333333333%;
+   }
 
 
-//    .cols-sm-11 {
-//       width: 91.6666666667%;
-//    }
-// }
+   .cols-sm-11 {
+      width: 91.6666666667%;
+   }
+}
 
 @media screen and (min-width: 768px) {
    .row-cols-md-1 > * {
@@ -322,7 +322,7 @@ button {
    }
 }
 
-@media screen and (min-width: 1236px) {
+@media screen and (min-width: 1280px) {
    .row-cols-lg-1 > * {
       width: 100%;
    }
