--- a/src/styles/blocks/popular.scss
+++ b/src/styles/blocks/popular.scss
@@ -60,6 +60,7 @@
 
    display: flex;
    flex-direction: column;
+
    &__image {
       width: 100%;
       height: 99px;
@@ -105,7 +106,6 @@
    &__title {
       font-weight: 700;
       font-size: 14px;
-      line-height: 20px;
       color: $title;
       margin-bottom: 10px;
 
@@ -157,22 +157,6 @@
       }
    }
 
-   .btn {
-      padding: 10px;
-      @media screen and (max-width: 1280px) {
-         position: absolute;
-         bottom: 0;
-         right: 0;
-         left: 0;
-
-         font-size: 18px;
-
-         border-radius: 0;
-         border: none;
-         border-top: 1px solid $primary-red;
-      }
-   }
-
    &__logo {
       position: absolute;
       top: 15px;
@@ -184,5 +168,35 @@
 
    @media screen and (min-width: 1280px) {
       border-radius: 10px;
+   }
+
+   &--big {
+      .popular-card {
+         &__image {
+            height: 171px;
+   
+            @media screen and (min-width: 1280px) {
+               height: 235px;
+            }
+         }
+   
+         &__title {
+            font-size: 16px;
+   
+            @media screen and (min-width: 1280px) {
+               font-size: 20px;
+            }
+         }
+   
+         .price {
+            &__ru  {
+               
+               font-size: 24px;
+               @media screen and (min-width: 1280px) {
+                  font-size: 24px;
+               }
+            }
+         }  
+      }
    }
 }
