--- a/src/styles/blocks/invite.scss
+++ b/src/styles/blocks/invite.scss
@@ -193,6 +193,6 @@
    }
 
    &__input:checked + &__label::before {
-      background: url(../../images/checked.svg) center no-repeat;
+      background: url(../../images/icons/checked.svg) center no-repeat;
    }
 }
