--- a/src/styles/blocks/page-about.scss
+++ b/src/styles/blocks/page-about.scss
@@ -80,7 +80,7 @@
    &__column {
       max-width: 790px;
 
-      a {
+      a[href="mailto:mail@immigrant.today"] {
          display: inline-flex;
          align-items: center;
          vertical-align: bottom;
@@ -108,6 +108,29 @@
             transform: translateY(-50%);
             background: url(../../images/icons/email.svg) center no-repeat;
          }
+      }
+   }
+
+   &__best {
+      padding: 33px 60px;
+      margin-bottom: 15px;
+
+      background-color: $bg;
+      border-left: 5px solid #468E87;
+
+      position: relative;
+
+      &::before {
+         content: '';
+         display: block;
+         width: 24px;
+         height: 24px;
+
+         position: absolute;
+         top: 20px;
+         left: 20px;
+
+         background: url(../../images/icons/quotation-marks.svg) center no-repeat;
       }
    }
 
