--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -9,6 +9,10 @@
    &__wrapper {
       position: relative;
       margin-bottom: 178px;
+
+      &--m0 {
+         margin: 0;
+      }
    }
 
    .swiper-pagination.slider-pagination {
