--- a/src/styles/blocks/preview.scss
+++ b/src/styles/blocks/preview.scss
@@ -61,7 +61,7 @@
          top: 0;
          left: -48px;
 
-         background: url(../../images/maple.svg) center / cover no-repeat;
+         background: url(../../images/icons/maple.svg) center / cover no-repeat;
 
          @media screen and (min-width: 1280px) {
             width: 36px;
