--- a/src/styles/blocks/page-about.scss
+++ b/src/styles/blocks/page-about.scss
@@ -13,42 +13,6 @@
       }
    }
 
-   &__sticky {
-      padding: 30px 15px;
-      max-width: 380px;
-
-      box-shadow: -5px 0px 10px rgba(190, 190, 190, 0.25), 5px 5px 10px rgba(190, 190, 190, 0.25);
-      border-radius: 10px;
-
-      h4 {
-         font-weight: 700;
-         font-size: 18px;
-         color: $title;
-         margin-bottom: 15px;
-         @media screen and (min-width: 1280px) {
-            font-size: 24px;
-            margin-bottom: 20px;
-         }
-      }
-
-      p {
-         font-weight: 400;
-         font-size: 16px;
-         line-height: 20px;
-         color: $title;
-         margin-bottom: 15px;
-      }
-      @media screen and (min-width: 1280px) {
-         position: sticky;
-         top: 40px;
-      }
-
-      .btn {
-         width: 100%;
-         padding: 15px auto;
-      }
-   }
-
    &__title {
       margin-bottom: 30px;
    }
@@ -194,6 +158,7 @@
                position: absolute;
                top: 0;
                left: 0;
+               transform: translateY(0);
 
                width: 24px;
                height: 24px;
@@ -239,4 +204,40 @@
       }
    }
 
+}
+
+.questions-sticky {
+   padding: 30px 15px;
+   max-width: 380px;
+
+   box-shadow: -5px 0px 10px rgba(190, 190, 190, 0.25), 5px 5px 10px rgba(190, 190, 190, 0.25);
+   border-radius: 10px;
+
+   h4 {
+      font-weight: 700;
+      font-size: 18px;
+      color: $title;
+      margin-bottom: 15px;
+      @media screen and (min-width: 1280px) {
+         font-size: 24px;
+         margin-bottom: 20px;
+      }
+   }
+
+   p {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 20px;
+      color: $title;
+      margin-bottom: 15px;
+   }
+   @media screen and (min-width: 1280px) {
+      position: sticky;
+      top: 40px;
+   }
+
+   .btn {
+      width: 100%;
+      padding: 15px auto;
+   }
 }
