--- a/src/styles/blocks/header-bottom.scss
+++ b/src/styles/blocks/header-bottom.scss
@@ -1,5 +1,7 @@
 .header-bottom {
    padding: 15px 0;
+	background-color: #fff;
+
    &__wrapper {
       display: flex;
       align-items: center;
@@ -10,6 +12,7 @@
       max-width: 278px;
       max-height: 84px;
       margin-right: 70px;
+		z-index: 10;
 
       @media screen and (max-width: 1280px) {
          width: 133px;
@@ -19,7 +22,22 @@
    }
 
    @media screen and (max-width: 1280px) {
-      position: relative;
+		background-color: #fff;
+
+		&:after {
+			content: '';
+			display: block;
+			width: 100%;
+			height: 100%;
+	
+			position: absolute;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+	
+			background-color: #fff;
+		}
    }
 }
 
@@ -31,6 +49,7 @@
    overflow: hidden;
 
    display: none;
+	z-index: 10;
    &__wrapper {
       width: 100%;
       height: 100%;
@@ -48,11 +67,27 @@
          height: 2px;
          background: #fff;
          border-radius: 10px;
+
+			transition: all 0.2s ease-in-out;
          &:nth-child(2) {
             margin: 6px 0;
          }
       }
    }
+
+	&--active {
+		span {
+			&:nth-child(1) {
+				transform: rotate(45deg) translateY(50%);
+			}
+			&:nth-child(2) {
+				display: none;
+			}
+			&:nth-child(3) {
+				transform: rotate(-45deg) translateY(-50%);
+			}
+		}
+	}
 
    @media screen and (max-width: 1280px) {
       display: block;
@@ -62,20 +97,55 @@
 
 .user-btn {
    display: none;
-   align-items: center;
-   justify-content: center;
 
    width: 44px;
    height: 44px;
-   margin-right: 15px;
+	z-index: 10;
 
    background: #FCEEEC;
    border-radius: 5px;
-   .icon {
-      width: 20px;
-      height: 20px;
-      fill: $primary-red;
-   }
+
+	position: relative;
+	&::after {
+		content: '';
+		display: block;
+
+		width: 24px;
+		height: 24px;
+
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+
+		background: url(../../images/icons/user.svg) center  no-repeat;
+	}
+
+	&::before {
+		content: '';
+		display: none;
+
+		width: 24px;
+		height: 24px;
+
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+
+		background: url(../../images/icons/cross.svg) center  no-repeat;
+	}
+
+	&--active {
+		&::after {
+			display: none;
+		}
+
+		&::before {
+			display: block;
+		}
+	}
+
 
    @media screen and (max-width: 1280px) {
       display: flex;
@@ -88,20 +158,42 @@
 
    .drop-down {
       display: none;
+		margin-bottom: 30px;
    }
 
    .btn {
       &--mobile {
-         display: none;
-      }
-   }
+			padding: 15px 32px;
+   	}
+	}
+
+	.chance-wrapper {
+		width: 100%;
+		padding: 0 18px;
+		display: none;
+
+		@media screen and (max-width: 1280px) {
+			display: block;
+		}
+	}
 
    @media screen and (max-width: 1280px) {
       flex-direction: column;
       position: absolute;
-      top: 100%;
-      left: 0;
+      top: 0;
+      left: -100%;
+		
       width: 100%;
+		height: 100vh;
+		padding-top: 74px;
+		padding-bottom: 30px;
+
+		transition: all 0.2s ease-in-out;
+		&--active {
+			left: 0;
+			z-index: -1;
+			overflow: scroll;
+		}
 
       .drop-down {
          display: block;
@@ -109,6 +201,9 @@
          padding: 0 18px;
 
          &__title {
+            padding: 12px 15px;
+            border: 1px solid #DBDFEC;
+            border-radius: 5px;
             .icon {
                &__arrow {
                   margin-left: auto;
@@ -116,17 +211,45 @@
             }
          }
 
+         &__list {
+            display: block;
+            position: static;
+            height: 0;
+            margin: 0;
+            box-shadow: none;
+
+            transition: all 0.2s ease-in-out;
+         }
+
          &__item {
-            padding: 12px 15px;
-            border: 1px solid #DBDFEC;
-            border-radius: 5px;
             &:first-child {
                margin-bottom: 10px;
+            }
+
+            &--visible {
+               .drop-down {
+                  &__title {
+							color: $primary-red;
+							.icon {
+								fill: $primary-red;
+								&__arrow {
+									transform: rotate(-180deg);
+									fill: $primary-red;
+								}
+							}
+						}
+						&__list {
+							height: 100%;
+							margin-top: 5px;
+							box-shadow: 0 5px 5px 5px rgba(190,190,190,.25);
+						}
+               }
             }
          }
       }
    }
 }
+
 
 .search {
    display: flex;
@@ -134,6 +257,7 @@
    margin-right: 15px;
    margin-left: auto;
    position: relative;
+	z-index: 10;
 
    &__wrapper {
       position: absolute;
