--- a/src/styles/blocks/invite.scss
+++ b/src/styles/blocks/invite.scss
@@ -160,7 +160,7 @@
       cursor: pointer;
 
       font-weight: 400;
-      font-size: 10px;
+      font-size: 12px;
       color: $title;
 
       display: block;
@@ -175,17 +175,10 @@
 
          position: absolute;
          left: 0;
-         top: -50%;
+         top: 0;
 
          cursor: pointer;
       }
-
-      @media screen and (min-width:768px) {
-         font-size: 12px;
-         &::before {
-            top: -3px;
-         }
-      } 
 
       @media screen and (min-width:768px) {
          font-size: 14px;
