--- a/src/styles/blocks/header-bottom.scss
+++ b/src/styles/blocks/header-bottom.scss
@@ -24,6 +24,7 @@
 
    @media screen and (max-width: 1280px) {
 		background-color: #fff;
+      box-shadow: 0px 5px 20px rgba(190, 190, 190, 0.25);
 
 		&:after {
 			content: '';
@@ -160,6 +161,49 @@
    }
 }
 
+.user-mobile {
+   display: none;
+   background-color: #fff;
+
+   &__item {
+      padding: 11px 18px;
+      border-bottom: 1px solid #DBDFEC;
+
+      font-weight: 400;
+      font-size: 16px;
+      color: $title;
+
+      cursor: pointer;
+      transition: color 0.2s linear;
+
+      &--bold {
+         font-weight: 700;
+      }
+
+      &:hover {
+         color: $primary-red;
+      }
+   }
+   @media screen and (max-width: 1280px){
+      display: block;
+      position: fixed;
+      top: 0;
+      left: -200%;
+      
+      width: 100%;
+      height: 100vh;
+      padding-top: 74px;
+      padding-bottom: 30px;
+   
+      transition: all 0.2s ease-in-out;
+      &--active {
+         left: 0;
+         z-index: -1;
+         overflow: scroll;
+      }
+   }
+}
+
 .nav-menu {
    display: flex;
    align-items: center;
@@ -188,14 +232,15 @@
    @media screen and (max-width: 1280px) {
       flex-direction: column;
       position: fixed;
-      top: 0;
+      z-index: 99;   
+      top: 74px;
       left: -200%;
 		
       width: 100%;
 		height: 100vh;
-		padding-top: 74px;
 		padding-bottom: 30px;
 
+      background-color: #fff;
 		transition: all 0.5s ease-in-out;
 		&--active {
 			left: 0;
@@ -257,7 +302,6 @@
       }
    }
 }
-
 
 .search {
    display: flex;
