--- a/src/styles/blocks/header-bottom.scss
+++ b/src/styles/blocks/header-bottom.scss
@@ -6,6 +6,7 @@
       display: flex;
       align-items: center;
       position: relative;
+
    }
 
    &__logo {
@@ -19,6 +20,34 @@
          width: 133px;
          height: 40px;
          margin-right: 0;
+      }
+   }
+
+   &__header-user {
+      display: none;
+      align-items: center;
+      gap: 10px;
+      width: 100%;
+      height: 100%;
+      z-index: 20;
+
+      font-weight: 700;
+      font-size: 18px;
+      color: $title;
+
+      background-color: #fff;
+
+      position: absolute;
+      top: 0;
+      left: 0;
+      .icon {
+         width: 24px;
+         height: 24px;
+         fill: $primary-red;
+      }
+
+      &--active {
+         display: flex;
       }
    }
 
@@ -106,7 +135,7 @@
    position: relative;
    width: 44px;
    height: 44px;
-	z-index: 10;
+	z-index: 30;
 
    background: #FCEEEC;
    border-radius: 5px;
@@ -234,10 +263,10 @@
       position: fixed;
       z-index: 99;   
       top: 74px;
+      bottom: 0;
       left: -200%;
 		
       width: 100%;
-		height: 100vh;
 		padding-bottom: 30px;
 
       background-color: #fff;
