--- a/src/styles/blocks/category-articles.scss
+++ b/src/styles/blocks/category-articles.scss
@@ -1,7 +1,27 @@
 .article-detail {
    &__wrapper {
       display: flex;
+      flex-direction: column;
+      gap: 60px;
    }
+
+   .question {
+      &__image {
+         max-height: 220px;
+         border-radius: 10px;
+      }
+   }
+
+   @media screen and (min-width: 1280px) {
+      &__wrapper {
+         flex-direction: row;
+      }
+
+      &__section {
+         flex: 0 0 380px;
+      }
+   }
+
 }
 
 .articles-content {
@@ -40,16 +60,56 @@
       margin-bottom: 15px;
 
       font-weight: 400;
-      font-size: 16px;
+      font-size: 14px;
       color: $title;
+
+      @media screen and (min-width: 1280px) {
+         font-size: 16px;
+      }
    }
 
    &__root {
-      margin-bottom: 70px;
+      margin-bottom: 50px;
    }
 
    &__news {
       margin-bottom: 40px;
+   }
+
+   &__what-chances {
+      display: block;
+      width: 100%;
+      height: 45px;
+      margin-bottom: 40px;
+
+      border-radius: 10px;
+      overflow: hidden;
+
+      img {
+         width: 100%;
+         height: 100%;
+         object-fit: cover;
+      }
+   }
+
+   &__actual {
+      margin-bottom: 24px;
+      padding-bottom: 35px;
+   }
+
+   @media screen and (min-width: 1280px) {
+      &__root {
+         margin-bottom: 70px;
+      }
+
+      &__what-chances {
+         height: 101px;
+      }
+
+      &__actual {
+         margin-bottom: 38px;
+         padding-bottom: 50px;
+      }
    }
 }
 
@@ -133,7 +193,7 @@
       margin-bottom: 20px;
 
       font-weight: 400;
-      font-size: 16px;
+      font-size: 14px;
       color: $primary-red;
    }
 
@@ -148,14 +208,14 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 5px 20px;
+      padding: 5px 12px;
 
       background: #FFF6F6;
       border: 1px dashed $primary-red;
       border-radius: 100px;
 
       font-weight: 400;
-      font-size: 14px;
+      font-size: 10px;
       color: $title;
 
       transition: all 0.2s ease-in-out;
@@ -166,17 +226,28 @@
          color: #fff;
       }
    }
+
+   @media screen and (min-width: 1280px) {
+      &__title {
+         font-size: 16px;
+      }
+
+      &__link {
+         font-size: 14px;
+         padding: 5px 20px;
+      }
+   }
 }
 
 .last-news {
    &__title {
       font-weight: 700;
-      font-size: 24px;
+      font-size: 18px;
       margin-bottom: 20px;
    }
 
    &__list {
-      padding-left: 20px;
+      padding-left: 17px;
    }
 
    &__item {
@@ -184,22 +255,217 @@
       margin-bottom: 10px;
 
       font-weight: 400;
-      font-size: 20px;
+      font-size: 14px;
       color: $title;
       &::before {
          content: '';
          display: block;
-         width: 10px;
-         height: 10px;
+         width: 7px;
+         height: 7px;
 
          background-color: $primary-red;
          border-radius: 50%;
 
          position: absolute;
-         left: -20px;
-         top: 50%;
-         transform: translateY(-50%);
+         left: -17px;
+         top: 7.5px;
       }
    }
 
+   @media screen and (min-width: 1280px) {
+      &__title {
+         font-size: 24px;
+      }
+
+      &__list {
+         padding-left: 20px;
+      }
+
+      &__item {
+         font-size: 20px;
+         &::before {
+            left: -20px;
+            top: 10px;
+
+            width: 10px;
+            height: 10px;
+         }
+      }
+   }
+
+}
+
+.actual-news {
+
+   border-bottom: 1px solid #DBDFEC;
+
+   &__wrapper {
+      padding: 30px 15px;
+      margin-bottom: 35px;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      background-color: $bg;
+      border-radius: 10px;
+   }
+
+   &__item {
+      display: flex;
+      align-items: center;
+      width: 100%;
+      &:first-child {
+         margin-bottom: 20px;
+      }
+   }
+
+   &__preview {
+      width: 130px;
+      height: 80px;
+      margin-right: 15px;
+
+      overflow: hidden;
+      border-radius: 10px;
+
+      flex: 0 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+         width: 100%;
+         height: 100%;
+         object-fit: cover;
+      }
+   }
+
+   &__text {
+      font-weight: 400;
+      font-size: 14px;
+      color: $title;
+
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;  
+      overflow: hidden;
+   }
+
+   @media screen and (min-width: 1280px) {
+
+      &__wrapper {
+         flex-direction: row;
+         margin-bottom: 50px;
+      }
+
+      &__item {
+         padding: 0 10px;
+         flex: 1 1 50%;
+         &:first-child {
+            margin-bottom: 0;
+         }
+      }
+      
+   }
+}
+
+.section-articles {
+   &__box {
+      margin-bottom: 30px;
+
+      padding: 20px 15px;
+      border-radius: 10px;
+   
+      box-shadow: -5px 0px 10px rgba(190, 190, 190, 0.25), 5px 5px 10px rgba(190, 190, 190, 0.25);
+
+      @media screen and (min-width: 1280px) {
+         margin-bottom: 40px;
+      }
+   }
+}
+
+.analogs {
+   &__header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      margin-bottom: 25px;
+   }
+
+   &__main-link {
+      .icon {
+         width: 17px;
+         height: 13px;
+         fill: $primary-red;
+
+         transition: fill 0.2s ease-in-out;
+      }
+
+      &:hover {
+         .icon {
+            fill: $text;
+         }
+      }
+   }
+
+   &__list {
+      display: flex;
+      flex-direction: column;
+   }
+
+   &__item {
+      width: 100%;
+      padding-bottom: 10px;
+      margin-bottom: 18px;
+
+      border-bottom: 1px solid #F3F3F3;
+      transition: all 0.2s ease-in-out;
+
+      &:hover {
+         transform: translateX(10px);
+
+         .analogs {
+            &__text {
+               color: $primary-red;
+            }
+         }
+      }
+   }
+
+   &__link {
+      display: flex;
+      align-items: center;
+   }
+
+   &__preview {
+      max-width: 100px;
+      max-height: 62px;
+      object-fit: cover;
+
+      border-radius: 5px;  
+      margin-right: 10px;
+   }
+
+   &__text {
+      font-weight: 400;
+      font-size: 14px;
+      color: $title;
+
+      transition: color 0.2s ease-in-out;
+
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;  
+      overflow: hidden;
+   }
+}
+
+.important {
+   &__title {
+      display: block;
+      font-weight: 700;
+      font-size: 18px;
+      margin-bottom: 20px;
+   }
 }
