--- a/src/styles/blocks/header-top.scss
+++ b/src/styles/blocks/header-top.scss
@@ -1,6 +1,7 @@
 .header {
    box-shadow: 0px 5px 20px rgba(190, 190, 190, 0.25);
    z-index: 9999999;
+   margin-bottom: 40px;
    @media screen and (max-width: 1280px) {
       position: fixed;
       width: 100%;
