add section comment

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -107,6 +107,7 @@ body.lock {
       background: #F4F4F4;
       border: 1px solid #F4F4F4;
       color: $text-light;
+      color: $text-light;
    }
 
    &--non-availability {
