--- a/src/styles/blocks/comment.scss
+++ b/src/styles/blocks/comment.scss
@@ -9,7 +9,7 @@
 
    &__count {
       font-weight: 700;
-      font-size: 24px;
+      font-size: 16px;
       color: $title;
    }
 
@@ -20,6 +20,12 @@
 
    &__new {
       margin-bottom: 50px;
+   }
+
+   @media screen and (min-width: 768px) {
+      &__count {
+         font-size: 24px;
+      }
    }
 }
 
@@ -37,7 +43,7 @@
       font-size: 16px;
       color: $text;
 
-      max-width: 700px;
+      max-width: 90%;
       margin-bottom: 15px;
    }
 }
@@ -80,12 +86,46 @@
       font-size: 14px;
       color: $text;
    }
+
+   &__comment {
+      position: relative;
+   }
+}
+
+.like {
+   position: absolute;
+   right: 0;
+   top: 0;
+
+   display: flex;
+   align-items: center;
+
+   .icon {
+      width: 20px;
+      height: 20px;
+      fill: #FFE1DD;
+      cursor: pointer;
+      transition: fill 0.2s ease-in-out;
+
+      &:hover {
+         fill: $primary-red;
+      }
+   }
+
+   &__count {
+      margin-left: 7px;
+
+      font-weight: 700;
+      font-size: 14px;
+      color: $primary-red;
+   }
 }
 
 .answer {
    &__label {
       font-weight: 600;
       font-size: 10px;
+      text-transform: uppercase;
       color: $primary-red;
       cursor: pointer;
       transition: all 0.2s ease-in-out;
@@ -96,6 +136,7 @@
    }
 
    &__input {
+      display: block;
       resize: none;
       width: 100%;
       height: 0;
