--- a/src/styles/blocks/user.scss
+++ b/src/styles/blocks/user.scss
@@ -22,6 +22,7 @@
       line-height: 18px;
       color: #AFB2C4;
 
+      cursor: pointer;
       transition: color 0.2s ease-in-out;
 
       .icon {
