--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -96,7 +96,11 @@ body.lock {
    }
 
    &--comments {
-      padding: 20px 50px;
+      padding: 10px 30px;
+
+      @media screen and (min-width: 768px) {
+         padding: 20px 50px;
+      }
 
       @media screen and (min-width: 1280px) {
          padding: 20px 50px;
